<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Kiveukoi</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_accueil">Accueil</string>
    <string name="title_activity_statistiques">Statistiques</string>
    <string name="title_activity_profil">Profil</string>
	<string name="btnprofil">Profil</string>
	<string name="btnstatistiques">Statistiques</string>
	<string name="btnajouter">Ajouter</string>
    <string name="TitreAjoutModif">Reservation</string>
    <string name="title_activity_ajout_modif">Réservation</string>
    <string name="login">Connexion</string>
    <string name="date">Date :</string>
    <string name="heureDebut">Heure de début :</string>
    <string name="heureFin">Heure de fin :</string>
    <string name="ram">RAM :</string>
    <string name="processeur">Processeur(s) :</string>
    <string name="professeur">Professeur :</string>
    <string name="groupe">Groupe :</string>
    <string name="nombrePoste">Nombre de postes :</string>
    <string name="title_activity_connexion">Connexion</string>
    <string name="hint_login">Adresse mail</string>
    <string name="hint_password">Mot de passe</string>
    <string name="hint_secret">Code secret</string>
    <string name="hint_secretRepeter">Répéter code secret</string>
    <string name="label_secret">Saisir un code secret :</string>
    <string name="huith">8h</string>
    <string name="neufh">9h</string>
    <string name="dixh">10h</string>
    <string name="onzeh">11h</string>
    <string name="douzeh">12h</string>
    <string name="treizeh">13h</string>
    <string name="quatorzeh">14h</string>
    <string name="quinzeh">15h</string>
    <string name="seizeh">16h</string>
    <string name="dixsepth">17h</string>
    <string name="dixhuith">18h</string>
    <string name="ancienCode">Ancien code :</string>
    <string name="nouveauCode">Nouveau code :</string>
    <string name="repeterCode">Répéter code :</string>
    <string name="choixDate">Date</string>
    <string name="title_pin">Veuillez saisir votre code secret</string>
    <string name="title_activity_main">Connexion</string>
    <string name="update_pin">Modification du code secret</string>
    <string name="btn_update_pin">Modifier</string>
    <string name="itemQuitter">Quitter</string>
    <string name="coming_soon">A venir&#8230;</string>
    <string name="first_login_mdp">Identifiants</string>
    <string name="first_login_pin">Code secret</string>
    <string name="choixHeureDeb">Heure de début</string>
    <string name="choixHeureFin">Heure de fin</string>
    <string name="saisirRam">Saisir la RAM</string>
    <string name="ramGiga">Go</string>
    <string name="voirResa">Voir</string>
    <string name="titleResa">Mes réservations</string>
    <string name="ramMega">Mo</string>
    <string name="titreMegaGiga">Choisir la RAM</string>
    <color name="titletextcolor">#333333</color>
	<string-array name="megaGiga">	
		<item>MegaOctet</item>
		<item>GigaOctet</item>
	</string-array>
	<string name="ajouterModif">Ajouter modification</string>
    <string-array name="groupe">	
		<item>TGSI</item>
		<item>TISN</item>
		<item>SIO1</item>
		<item>SIO1 SISR</item>
		<item>SIO1 SLAM</item>
		<item>SIO1 Groupe 1</item>
		<item>SIO1 Groupe 2</item>
		<item>SIO2 SISR</item>
		<item>SIO2 SLAM</item>
		<item>SIO2 Groupe 1</item>
		<item>SIO2 Groupe 2</item>
		<item>Bachelor</item>
	</string-array>
    <string name="deconnexion">Déconnexion</string>
	
</resources>